--- a/examples/official-wingsuit/package.json
+++ b/examples/official-wingsuit/package.json
@@ -28,13 +28,12 @@
     "@packtracker/webpack-plugin": "^2.0.1",
     "@storybook/addon-docs": "^7.0.2",
     "@storybook/addon-links": "^7.0.2",
-    "@storybook/addon-measure": "^1.3.1",
-    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addon-postcss": "^3.0.0-alpha.1",
     "@storybook/addon-viewport": "^7.0.2",
     "@storybook/addons": "^7.0.2",
-    "@storybook/linter-config": "^2.5.0",
+    "@storybook/linter-config": "^3.1.2",
     "@storybook/react": "^7.0.2",
-    "@storybook/storybook-deployer": "^2.8.7",
+    "@storybook/storybook-deployer": "^2.8.16",
     "@wingsuit-designsystem/cli": "2.0.0-alpha.1",
     "@wingsuit-designsystem/core": "2.0.0-alpha.1",
     "@wingsuit-designsystem/pattern": "2.0.0-alpha.1",
