--- a/presets/storybook/package.json
+++ b/presets/storybook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/preset-storybook",
-  "version": "2.0.0-alpha.1",
+  "version": "2.0.0-alpha.2",
   "description": "Wingsuit Twing preset.",
   "repository": {
     "type": "git",
@@ -32,11 +32,11 @@
   },
   "gitHead": "b7c8ec4097ae5cf658338c2a6c9de411793c9a58",
   "dependencies": {
-    "@wingsuit-designsystem/storybook": "2.0.0-alpha.1",
-    "@wingsuit-designsystem/core": "2.0.0-alpha.1",
-    "@wingsuit-designsystem/pattern": "2.0.0-alpha.1",
+    "@wingsuit-designsystem/core": "2.0.0-alpha.2",
+    "@wingsuit-designsystem/pattern": "2.0.0-alpha.2",
+    "@wingsuit-designsystem/storybook": "2.0.0-alpha.2",
+    "glob": "^8.1.0",
     "path": "^0.12.7",
-    "webpack": "^5.56.1",
-    "glob": "^8.1.0"
+    "webpack": "^5.56.1"
   }
 }
