--- a/presets/icon-spritemap/package.json
+++ b/presets/icon-spritemap/package.json
@@ -34,8 +34,9 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "b7c8ec4097ae5cf658338c2a6c9de411793c9a58",
+  "gitHead": "561e222489a6b2fe94efadd6bb8dd31236708425",
   "dependencies": {
+    "@types/webpack-env": "^1.18.0",
     "@wingsuit-designsystem/core": "2.0.0-alpha.3",
     "@wingsuit-designsystem/pattern": "2.0.0-alpha.3",
     "@wingsuit-designsystem/preset-icon": "2.0.0-alpha.3",
