--- a/presets/icon-spritemap/tsconfig.json
+++ b/presets/icon-spritemap/tsconfig.json
@@ -5,7 +5,11 @@
     "rootDir": "./src",
     "strict": true,
     "noUnusedLocals": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "types": [
+      "node",
+      "webpack-env"
+    ]
   },
   "include": ["src/**/*"],
   "exclude": ["__tests__/**/*", "__int_tests__/**/*"]
