--- a/presets/pattern/package.json
+++ b/presets/pattern/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wingsuit-designsystem/preset-pattern",
   "version": "2.0.0-alpha.3",
-  "description": "Wingsuit Twing preset.",
+  "description": "Wingsuit Pattern preset.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wingsuit-designsystem/wingsuit.git"
@@ -32,7 +32,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "b7c8ec4097ae5cf658338c2a6c9de411793c9a58",
+  "gitHead": "561e222489a6b2fe94efadd6bb8dd31236708425",
   "dependencies": {
     "@wingsuit-designsystem/core": "2.0.0-alpha.3",
     "@wingsuit-designsystem/pattern": "2.0.0-alpha.3",
