--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
             - .cache
   packtracker:
     executor:
-      class: small
+      class: large
       name: sb_node_16_classic
     steps:
       - checkout
@@ -79,7 +79,7 @@ jobs:
             yarn packtracker
   examples:
     executor:
-      class: small
+      class: large
       name: sb_node_16_classic
     parallelism: 1
     steps:
@@ -89,7 +89,7 @@ jobs:
       - run:
           name: examples
           command: |
-            yarn build-storybooks
+            yarn build:storybook
       - persist_to_workspace:
           root: .
           paths:
