--- a/examples/official-wingsuit/package.json
+++ b/examples/official-wingsuit/package.json
@@ -19,56 +19,68 @@
   ],
   "scripts": {
     "build:storybook": "yarn ws build storybook",
-    "packtracker": "yarn ws build storybook --webpack-stats-json /tmp --quiet && cross-env PT_PROJECT_TOKEN=945a7723-9fe2-4318-ae53-6ee806cd9e86 packtracker-upload --stats=/tmp/preview-stats.json",
-    "storybook": "yarn ws dev storybook"
+    "packtracker": "yarn ws build storybook --output-dir /storybook-static --webpack-stats-json /tmp --quiet && cross-env PT_PROJECT_TOKEN=945a7723-9fe2-4318-ae53-6ee806cd9e86 packtracker-upload --stats=/tmp/preview-stats.json",
+    "storybook": "yarn ws dev storybook",
+    "packtracker-upload": "packtracker-upload"
   },
   "devDependencies": {
+    "@packtracker/webpack-plugin": "^2.3.0",
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "@packtracker/webpack-plugin": "^2.0.1",
     "@storybook/addon-docs": "^7.0.2",
+    "@storybook/addon-essentials": "^7.0.2",
     "@storybook/addon-links": "^7.0.2",
+    "@storybook/addon-measure": "^7.0.2",
     "@storybook/addon-postcss": "^3.0.0-alpha.1",
     "@storybook/addon-viewport": "^7.0.2",
     "@storybook/addons": "^7.0.2",
+    "@storybook/builder-webpack5": "^7.0.2",
     "@storybook/linter-config": "^3.1.2",
+    "@storybook/manager-webpack5": "^7.0.0-alpha.10",
     "@storybook/react": "^7.0.2",
-    "@storybook/storybook-deployer": "^2.8.16",
+    "@storybook/react-webpack5": "^7.0.0-alpha.0",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "@wingsuit-designsystem/cli": "2.0.0-alpha.4",
     "@wingsuit-designsystem/core": "2.0.0-alpha.4",
-    "@wingsuit-designsystem/pattern": "2.0.0-alpha.4",
     "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.4",
+    "@wingsuit-designsystem/preset-drupal": "2.0.0-alpha.4",
+    "@wingsuit-designsystem/preset-icon": "2.0.0-alpha.4",
+    "@wingsuit-designsystem/preset-icon-spritemap": "2.0.0-alpha.4",
+    "@wingsuit-designsystem/preset-imagemin": "2.0.0-alpha.4",
+    "@wingsuit-designsystem/preset-placeholder": "2.0.0-alpha.4",
+    "@wingsuit-designsystem/preset-storybook": "2.0.0-alpha.4",
+    "@wingsuit-designsystem/preset-tailwind": "2.0.0-alpha.4",
+    "@wingsuit-designsystem/preset-twing": "2.0.0-alpha.4",
     "@wingsuit-designsystem/storybook": "2.0.0-alpha.4",
     "autoprefixer": "^9.7.4",
-    "core-js": "^3.4.1",
-    "cross-env": "^6.0.3",
-    "eslint": "^6.7.2",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.10.0",
+    "core-js": "^3.29.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.37.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-import-resolver-webpack": "^0.12.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jest": "^23.7.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "fibers": "^4.0.2",
-    "holderjs": "^2.9.6",
-    "lodash": "^4.17.15",
+    "eslint-import-resolver-webpack": "^0.13.2",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "lodash": "^4.17.20",
+    "postcss": "^8",
     "postcss-nested": "^4.2.1",
     "prettier": "^1.19.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "regenerator-runtime": "^0.13.3",
-    "require-context": "^1.1.0",
+    "storybook": "^7.0.2",
+    "storybook-addon-themes": "^6.1.0",
     "stylelint-scss": "^3.17.2",
-    "webpack": "^4.41.3",
+    "webpack": "^5.56.1",
     "yo": "^3.1.1"
   },
   "dependencies": {
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
     "alpinejs": "^1.10.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "svg4everybody": "^2.1.9",
     "tailwindcss": "^1.4.0"
-  },
-  "gitHead": "f33e3b40f1bad944ca7cd0c1aec27618cc56f9ef"
+  }
 }
