--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -30,7 +30,7 @@
     "build:drupal": "yarn ws build drupal",
     "lint:js": "eslint --ext .js ./source",
     "lint:css": "stylelint '**/*.css'",
-    "lint": "npm run lint:js; npm run lint:css;",
+    "lint": "yarn run lint:js; npm run lint:css;",
     "fmt:js": "eslint --fix --ext .js,.vue ./source",
     "fmt:css": "npm run lint:css --fix && prettier --loglevel warn --write '**/*.{css}'",
     "fmt": "npm run fmt:js; npm run fmt:css",
@@ -39,16 +39,12 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "@storybook/addon-docs": "^7.0.2",
+    "storybook": "^7.0.2",
     "@storybook/addon-essentials": "^7.0.2",
     "@storybook/addon-links": "^7.0.2",
-    "@storybook/addon-measure": "^7.0.2",
     "@storybook/addon-postcss": "^3.0.0-alpha.1",
-    "@storybook/addon-viewport": "^7.0.2",
     "@storybook/addons": "^7.0.2",
     "@storybook/builder-webpack5": "^7.0.2",
-    "@storybook/linter-config": "^3.1.2",
-    "@storybook/manager-webpack5": "^7.0.0-alpha.10",
     "@storybook/react": "^7.0.2",
     "@storybook/react-webpack5": "^7.0.0-alpha.0",
     "@types/react": "^16.9.35",
@@ -77,19 +73,15 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "lodash": "^4.17.20",
     "postcss": "^8",
     "postcss-nested": "^4.2.1",
     "prettier": "^1.19.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "regenerator-runtime": "^0.13.3",
-    "storybook": "^7.0.2",
     "storybook-addon-themes": "^6.1.0",
-    "storybook-addon-turbo-build": "^1.1.0",
     "stylelint-scss": "^3.17.2",
-    "webpack": "^5.56.1",
-    "yo": "^3.1.1"
+    "webpack": "^5.56.1"
   },
   "dependencies": {
     "@drupal/once": "^1.0.1",
@@ -100,6 +92,5 @@
     "svg4everybody": "^2.1.9",
     "tailwind-hamburgers": "^1.3.4",
     "tailwindcss": "^3.2.7"
-  },
-  "gitHead": "bfeff58b8f6e6ace1c28f31ad67d75d6f18ee5a4"
+  }
 }
