--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wingsuit-designsystem/root",
   "engines": {
-    "node": ">=16.0.0",
+    "node": ">=16.14.0",
     "yarn": ">=1.3.2"
   },
   "husky": {
@@ -76,25 +76,26 @@
     "verdaccio-auth-memory": "^9.7.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-react-constant-elements": "^7.6.3",
-    "@babel/plugin-transform-runtime": "^7.9.0",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
-    "@babel/runtime": "^7.8.4",
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-react-constant-elements": "^7.21.3",
+    "@babel/plugin-transform-runtime": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.4",
+    "@babel/runtime": "^7.21.0",
+    "@emotion/jest": "^11.10.5",
     "@storybook/eslint-config-storybook": "^3.1.2",
     "@storybook/linter-config": "^3.1.2",
-    "@types/enzyme": "^3.10.3",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@types/enzyme": "^3.10.13",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.57.1",
-    "babel-jest": "^25.5.1",
+    "babel-jest": "^29.5.0",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-require-context-hook": "^1.0.0",
-    "codecov": "^3.5.0",
+    "codecov": "^3.8.3",
     "concurrently": "^5.1.0",
     "cross-env": "^7.0.0",
     "downlevel-dts": "^0.4.0",
@@ -108,22 +109,22 @@
     "express": "^4.17.1",
     "fs-extra": "^9.0.0",
     "http-server": "^0.12.3",
-    "jest": "^25.2.4",
-    "jest-cli": "^25.2.4",
-    "jest-config": "^25.2.4",
-    "jest-diff": "^25.1.0",
-    "jest-emotion": "^10.0.17",
-    "jest-environment-jsdom": "^25.2.4",
+    "jest": "^29.5.0",
+    "jest-cli": "^29.5.0",
+    "jest-config": "^29.5.0",
+    "jest-diff": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "jest-environment-jsdom-thirteen": "^1.0.1",
-    "jest-enzyme": "^7.0.2",
-    "jest-image-snapshot": "^3.0.1",
-    "jest-jasmine2": "^25.2.4",
-    "jest-matcher-utils": "^25.1.0",
+    "jest-enzyme": "^7.1.2",
+    "jest-image-snapshot": "^6.1.0",
+    "jest-jasmine2": "^29.5.0",
+    "jest-matcher-utils": "^29.5.0",
     "jest-raw-loader": "^1.0.1",
-    "jest-serializer-html": "^7.0.0",
-    "jest-watch-typeahead": "^0.4.0",
+    "jest-serializer-html": "^7.1.0",
+    "jest-watch-typeahead": "^2.2.2",
     "lerna": "^6.6.1",
     "node-cleanup": "^2.1.2",
+    "nx": "15.3.0",
     "p-limit": "^2.3.0",
     "prettier": "^2.0.2",
     "raf": "^3.4.0",
@@ -136,7 +137,9 @@
     "typescript": "^4.5.4",
     "wait-on": "^4.0.0",
     "window-size": "^1.1.1",
-    "nx": "15.3.0",
-    "@nrwl/nx-linux-x64-gnu": "^15.9.2"
+    "@babel/plugin-transform-modules-commonjs": "^7.21.2",
+    "@emotion/babel-plugin": "^11.10.6",
+    "ts-jest": "^29.1.0"
   }
+
 }
