--- a/starter-kits/vanilla-scss/package.json
+++ b/starter-kits/vanilla-scss/package.json
@@ -5,6 +5,10 @@
   "main": "",
   "license": "GPL-2.0",
   "private": true,
+  "engines": {
+    "node": ">=16.14.0",
+    "yarn": ">=1.3.2"
+  },
   "author": {
     "name": "KEY-TEC",
     "url": "https://github.com/wingsuit-designsystem/"
@@ -63,27 +67,23 @@
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
     "eslint": "^6.7.2",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-import-resolver-webpack": "^0.12.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jest": "^23.7.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "lodash": "^4.17.20",
+    "eslint-import-resolver-webpack": "^0.13.2",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "postcss": "^8",
-    "postcss-nested": "^4.2.1",
-    "prettier": "^1.19.1",
+    "postcss-nested": "^6.0.1",
+    "prettier": "^2.8.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "regenerator-runtime": "^0.13.3",
-    "require-context": "^1.1.0",
     "storybook": "^7.0.2",
     "storybook-addon-themes": "^6.0.1",
-    "storycap": "^3.0.4",
     "stylelint-scss": "^3.17.2",
-    "webpack": "^5.56.1",
-    "yo": "^3.1.1"
-  },
-  "gitHead": "bfeff58b8f6e6ace1c28f31ad67d75d6f18ee5a4"
+    "webpack": "^5.56.1"
+  }
 }
