--- a/starter-kits/vanilla-tailwind/package.json
+++ b/starter-kits/vanilla-tailwind/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/wingsuit-designsystem/"
   },
   "engines": {
-    "node": ">=12.13.0",
+    "node": ">=16.14.0",
     "yarn": ">=1.3.2"
   },
   "repository": {
@@ -83,16 +83,14 @@
     "require-context": "^1.1.0",
     "storybook": "^7.0.2",
     "storybook-addon-themes": "^6.0.1",
-    "storycap": "^3.0.4",
     "stylelint-scss": "^3.17.2",
-    "webpack": "^5.56.1",
-    "yo": "^3.1.1"
+    "webpack": "^5.56.1"
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.0",
     "alpinejs": "^3.0.9",
     "tailwindcss": "^3.0.7"
-  },
-  "gitHead": "bfeff58b8f6e6ace1c28f31ad67d75d6f18ee5a4"
+  }
+  
 }
