--- a/examples/official-wingsuit/package.json
+++ b/examples/official-wingsuit/package.json
@@ -19,7 +19,7 @@
   ],
   "scripts": {
     "build:storybook": "yarn ws build storybook",
-    "packtracker": "yarn ws build storybook --output-dir /storybook-static --webpack-stats-json /tmp --quiet && cross-env PT_PROJECT_TOKEN=945a7723-9fe2-4318-ae53-6ee806cd9e86 packtracker-upload --stats=/tmp/preview-stats.json",
+    "packtracker": "yarn ws build storybook --output-dir /tmp/storybook-static --webpack-stats-json /tmp --quiet && cross-env PT_PROJECT_TOKEN=945a7723-9fe2-4318-ae53-6ee806cd9e86 packtracker-upload --stats=/tmp/preview-stats.json",
     "storybook": "yarn ws dev storybook",
     "packtracker-upload": "packtracker-upload"
   },
