--- a/package.json
+++ b/package.json
@@ -55,8 +55,7 @@
     "test:e2e-gui": "concurrently --success first --kill-others \"cypress open\" \"yarn serve-storybooks\"",
     "build-storybooks": "cross-env STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true node -r esm ./scripts/build-storybooks.js",
     "serve-storybooks": "http-server ./built-storybooks -p 8001",
-    "await-serve-storybooks": "wait-on http://localhost:8001",
-    "drupal-demo:update-theme": "./scripts/rsync_theme.sh;"
+    "await-serve-storybooks": "wait-on http://localhost:8001"
   },
   "workspaces": [
     "docs",
@@ -125,6 +124,7 @@
     "lerna": "^6.6.1",
     "node-cleanup": "^2.1.2",
     "nx": "15.3.0",
+    "@swc/core": "^1.3.57",
     "p-limit": "^2.3.0",
     "prettier": "^2.0.2",
     "raf": "^3.4.0",
