--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -48,9 +48,9 @@
     "@wingsuit-designsystem/core": "2.0.0-alpha.4",
     "assign-deep": "^1.0.1",
     "ast-query": "^2.0.0",
-    "babel-generator": "^6.26.1",
-    "babel-traverse": "^6.26.0",
-    "babel-types": "^6.26.0",
+    "babel-generator": "^7.0.0-beta.3",
+    "babel-traverse": "^7.0.0-beta.3",
+    "babel-types": "^7.0.0-beta.3",
     "babylon": "^6.18.0",
     "chalk": "^2.1.0",
     "commander": "^5.1.0",
