--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,8 +33,6 @@
   },
   "gitHead": "561e222489a6b2fe94efadd6bb8dd31236708425",
   "dependencies": {
-    
-
     "@types/node": "^16.10.2",
     "@types/webpack": "^5.28.0",
     "@wingsuit-designsystem/pattern": "2.0.0-alpha.4",
@@ -43,6 +41,7 @@
     "babel-loader": "^8.2.2",
     "buffer": "^6.0.3",
     "copy-webpack-plugin": "^9.0.1",
+    "core-js": "^3.30.2",
     "crypto-browserify": "^3.12.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^5.0.0",
