--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,6 +38,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-emotion": "7.3.1",
     "copy-webpack-plugin": "^5.1.1",
+    "core-js": "^3.30.2",
     "css-loader": "^3.4.0",
     "drupal-attribute": "^1.0.2",
     "external-svg-sprite-loader": "^5.0.1",
