--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -76,6 +76,15 @@
     "webpack": "^5.56.1",
     "webpack-cli": "^5.0.1",
     "webpack-merge": "^5.8.0",
-    "yargs": "^17.2.1"
+    "yargs": "^17.2.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-webpack": "^0.13.2",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "regenerator-runtime": "^0.13.3"
   }
 }
