--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -37,8 +37,6 @@
     "ci": "npm run lint && npm run build:drupal"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
     "storybook": "^7.0.2",
     "@storybook/addon-essentials": "^7.0.2",
     "@storybook/addon-links": "^7.0.2",
@@ -46,9 +44,7 @@
     "@storybook/addons": "^7.0.2",
     "@storybook/builder-webpack5": "^7.0.2",
     "@storybook/react": "^7.0.2",
-    "@storybook/react-webpack5": "^7.0.0-alpha.0",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
+    "storybook-addon-themes": "^6.1.0",
     "@wingsuit-designsystem/cli": "2.0.0-alpha.4",
     "@wingsuit-designsystem/core": "2.0.0-alpha.4",
     "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.4",
@@ -60,28 +56,7 @@
     "@wingsuit-designsystem/preset-storybook": "2.0.0-alpha.4",
     "@wingsuit-designsystem/preset-tailwind": "2.0.0-alpha.4",
     "@wingsuit-designsystem/preset-twing": "2.0.0-alpha.4",
-    "@wingsuit-designsystem/storybook": "2.0.0-alpha.4",
-    "autoprefixer": "^9.7.4",
-    "core-js": "^3.29.1",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.37.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-import-resolver-webpack": "^0.13.2",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "postcss": "^8",
-    "postcss-nested": "^4.2.1",
-    "prettier": "^1.19.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "regenerator-runtime": "^0.13.3",
-    "storybook-addon-themes": "^6.1.0",
-    "stylelint-scss": "^3.17.2",
-    "webpack": "^5.56.1"
+    "@wingsuit-designsystem/storybook": "2.0.0-alpha.4"
   },
   "dependencies": {
     "@drupal/once": "^1.0.1",
