--- a/starter-kits/vanilla-scss/package.json
+++ b/starter-kits/vanilla-scss/package.json
@@ -39,18 +39,14 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "@storybook/addon-docs": "^7.0.2",
-    "@storybook/addon-essentials": "^7.0.2",
-    "@storybook/addon-links": "^7.0.2",
-    "@storybook/addon-measure": "^7.0.2",
+    "@storybook/addon-docs": "^7.0.11",
+    "@storybook/addon-essentials": "^7.0.11",
+    "@storybook/addon-links": "^7.0.11",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-viewport": "^7.0.2",
-    "@storybook/addons": "^7.0.2",
-    "@storybook/builder-webpack5": "^7.0.2",
-    "@storybook/linter-config": "^2.5.0",
-    "@storybook/manager-webpack5": "^7.0.0-alpha.10",
+    "@storybook/builder-webpack5": "^7.0.11",
+    "@storybook/linter-config": "^3.1.2",
     "@storybook/react": "^7.0.2",
-    "@storybook/react-webpack5": "^7.0.0-alpha.0",
+    "@storybook/react-webpack5": "^7.0.11",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@wingsuit-designsystem/cli": "2.0.0-alpha.4",
@@ -64,26 +60,9 @@
     "@wingsuit-designsystem/preset-twing": "2.0.0-alpha.4",
     "@wingsuit-designsystem/storybook": "2.0.0-alpha.4",
     "autoprefixer": "^9.7.4",
-    "core-js": "^3.4.1",
-    "cross-env": "^6.0.3",
-    "eslint": "^6.7.2",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-import-resolver-webpack": "^0.13.2",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "postcss": "^8",
-    "postcss-nested": "^6.0.1",
-    "prettier": "^2.8.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "regenerator-runtime": "^0.13.3",
-    "storybook": "^7.0.2",
     "storybook-addon-themes": "^6.0.1",
-    "stylelint-scss": "^3.17.2",
-    "webpack": "^5.56.1"
+    "stylelint-scss": "^3.17.2"
   }
 }
