--- a/starter-kits/vanilla-tailwind/package.json
+++ b/starter-kits/vanilla-tailwind/package.json
@@ -37,20 +37,15 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "@storybook/addon-docs": "^7.0.2",
     "@storybook/addon-essentials": "^7.0.2",
     "@storybook/addon-links": "^7.0.2",
-    "@storybook/addon-measure": "^7.0.2",
     "@storybook/addon-postcss": "^3.0.0-alpha.1",
-    "@storybook/addon-viewport": "^7.0.2",
     "@storybook/addons": "^7.0.2",
     "@storybook/builder-webpack5": "^7.0.2",
-    "@storybook/linter-config": "^2.5.0",
+    "@storybook/linter-config": "^3.1.2",
     "@storybook/manager-webpack5": "^7.0.0-alpha.10",
     "@storybook/react": "^7.0.2",
     "@storybook/react-webpack5": "^7.0.0-alpha.0",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
     "@wingsuit-designsystem/cli": "2.0.0-alpha.4",
     "@wingsuit-designsystem/core": "2.0.0-alpha.4",
     "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.4",
@@ -63,34 +58,14 @@
     "@wingsuit-designsystem/preset-twing": "2.0.0-alpha.4",
     "@wingsuit-designsystem/storybook": "2.0.0-alpha.4",
     "autoprefixer": "^9.7.4",
-    "core-js": "^3.4.1",
-    "cross-env": "^6.0.3",
-    "eslint": "^6.7.2",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-import-resolver-webpack": "^0.12.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jest": "^23.7.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "lodash": "^4.17.20",
-    "postcss": "^8",
-    "postcss-nested": "^4.2.1",
-    "prettier": "^1.19.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "regenerator-runtime": "^0.13.3",
-    "require-context": "^1.1.0",
-    "storybook": "^7.0.2",
-    "storybook-addon-themes": "^6.0.1",
-    "stylelint-scss": "^3.17.2",
-    "webpack": "^5.56.1"
+    "react-dom": "^16.13.1"
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.0",
-    "alpinejs": "^3.0.9",
-    "tailwindcss": "^3.0.7"
+    "alpinejs": "^3.12.1",
+    "tailwindcss": "^3.3.2"
   }
-  
+
 }
