fix: Remove jquery.once

--- a/starter-kits/vanilla-tailwind/package.json
+++ b/starter-kits/vanilla-tailwind/package.json
@@ -43,9 +43,8 @@
     "@storybook/addons": "^7.0.2",
     "@storybook/builder-webpack5": "^7.0.2",
     "@storybook/linter-config": "^3.1.2",
-    "@storybook/manager-webpack5": "^7.0.0-alpha.10",
     "@storybook/react": "^7.0.2",
-    "@storybook/react-webpack5": "^7.0.0-alpha.0",
+    "@storybook/react-webpack5": "^7.0.11",
     "@wingsuit-designsystem/cli": "2.0.0-alpha.4",
     "@wingsuit-designsystem/core": "2.0.0-alpha.4",
     "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.4",
