--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -44,6 +44,7 @@
     "@storybook/addons": "^7.0.2",
     "@storybook/builder-webpack5": "^7.0.2",
     "@storybook/react": "^7.0.2",
+    "@storybook/react-webpack5": "^7.0.2",
     "storybook-addon-themes": "^6.1.0",
     "@wingsuit-designsystem/cli": "2.0.0-alpha.4",
     "@wingsuit-designsystem/core": "2.0.0-alpha.4",
