--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/starter-kit-tailwind",
-  "version": "2.0.0-alpha.4",
+  "version": "2.0.0-alpha.5",
   "description": "A design system with Storybook, Tailwind and Drupal",
   "main": "",
   "private": true,
@@ -37,7 +37,6 @@
     "ci": "npm run lint && npm run build:drupal"
   },
   "devDependencies": {
-    "storybook": "^7.0.2",
     "@storybook/addon-essentials": "^7.0.2",
     "@storybook/addon-links": "^7.0.2",
     "@storybook/addon-postcss": "^3.0.0-alpha.1",
@@ -45,21 +44,22 @@
     "@storybook/builder-webpack5": "^7.0.2",
     "@storybook/react": "^7.0.2",
     "@storybook/react-webpack5": "^7.0.2",
-    "storybook-addon-themes": "^6.1.0",
-    "@wingsuit-designsystem/cli": "2.0.0-alpha.4",
-    "@wingsuit-designsystem/core": "2.0.0-alpha.4",
-    "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.4",
-    "@wingsuit-designsystem/preset-drupal": "2.0.0-alpha.4",
-    "@wingsuit-designsystem/preset-icon": "2.0.0-alpha.4",
-    "@wingsuit-designsystem/preset-icon-spritemap": "2.0.0-alpha.4",
-    "@wingsuit-designsystem/preset-imagemin": "2.0.0-alpha.4",
-    "@wingsuit-designsystem/preset-placeholder": "2.0.0-alpha.4",
-    "@wingsuit-designsystem/preset-storybook": "2.0.0-alpha.4",
-    "@wingsuit-designsystem/preset-tailwind": "2.0.0-alpha.4",
-    "@wingsuit-designsystem/preset-twing": "2.0.0-alpha.4",
-    "@wingsuit-designsystem/storybook": "2.0.0-alpha.4",
+    "@wingsuit-designsystem/cli": "2.0.0-alpha.5",
+    "@wingsuit-designsystem/core": "2.0.0-alpha.5",
+    "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.5",
+    "@wingsuit-designsystem/preset-drupal": "2.0.0-alpha.5",
+    "@wingsuit-designsystem/preset-icon": "2.0.0-alpha.5",
+    "@wingsuit-designsystem/preset-icon-spritemap": "2.0.0-alpha.5",
+    "@wingsuit-designsystem/preset-imagemin": "2.0.0-alpha.5",
+    "@wingsuit-designsystem/preset-placeholder": "2.0.0-alpha.5",
+    "@wingsuit-designsystem/preset-storybook": "2.0.0-alpha.5",
+    "@wingsuit-designsystem/preset-tailwind": "2.0.0-alpha.5",
+    "@wingsuit-designsystem/preset-twing": "2.0.0-alpha.5",
+    "@wingsuit-designsystem/storybook": "2.0.0-alpha.5",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "storybook": "^7.0.2",
+    "storybook-addon-themes": "^6.1.0"
   },
   "dependencies": {
     "@drupal/once": "^1.0.1",
