--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/core",
-  "version": "2.0.0-alpha.4",
+  "version": "2.0.0-alpha.5",
   "description": "Wingsuit Core Design System.",
   "repository": {
     "type": "git",
@@ -35,7 +35,7 @@
   "dependencies": {
     "@types/node": "^16.10.2",
     "@types/webpack": "^5.28.0",
-    "@wingsuit-designsystem/pattern": "2.0.0-alpha.4",
+    "@wingsuit-designsystem/pattern": "2.0.0-alpha.5",
     "autoprefixer": "^10.3.7",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
@@ -46,6 +46,14 @@
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^5.0.0",
     "eslint": "^8.37.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-webpack": "^0.13.2",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-webpack-plugin": "^4.0.0",
     "fs-extra": "^10.0.0",
     "glob": "^8.1.0",
@@ -65,6 +73,7 @@
     "postcss-replace": "^2.0.0",
     "prettier": "^2.3.0",
     "reflect-metadata": "^0.1.13",
+    "regenerator-runtime": "^0.13.3",
     "resolve-url-loader": "^3.1.4",
     "schema-utils": "^3.1.1",
     "stream-browserify": "^3.0.0",
@@ -76,15 +85,6 @@
     "webpack": "^5.56.1",
     "webpack-cli": "^5.0.1",
     "webpack-merge": "^5.8.0",
-    "yargs": "^17.2.1",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-import-resolver-webpack": "^0.13.2",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "regenerator-runtime": "^0.13.3"
+    "yargs": "^17.2.1"
   }
 }
