--- a/starter-kits/tailwind/.eslintignore
+++ b/starter-kits/tailwind/.eslintignore
@@ -5,7 +5,7 @@ dist/
 tools/tests/vrt/backstop_data
 preview.js-generated-config-entry.js
 storybook-init-framework-entry.js
-
+storybook-config-entry.js
 /**/node_modules/*
 .*/
 node_modules
