--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -42,6 +42,7 @@
     "@storybook/addon-postcss": "^3.0.0-alpha.1",
     "@storybook/addons": "^7.0.2",
     "@storybook/builder-webpack5": "^7.0.2",
+    "@storybook/linter-config": "^3.1.2",
     "@storybook/react": "^7.0.2",
     "@storybook/react-webpack5": "^7.0.2",
     "@wingsuit-designsystem/cli": "2.0.0-alpha.5",
@@ -56,16 +57,19 @@
     "@wingsuit-designsystem/preset-tailwind": "2.0.0-alpha.5",
     "@wingsuit-designsystem/preset-twing": "2.0.0-alpha.5",
     "@wingsuit-designsystem/storybook": "2.0.0-alpha.5",
+    "@wingsuit-designsystem/preset-lint": "2.0.0-alpha.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "storybook": "^7.0.2",
-    "storybook-addon-themes": "^6.1.0"
+    "storybook-addon-theme-provider": "^0.1.10",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.0",
+    "autoprefixer": "^9.7.4",
+    "postcss": "^8.4.23"
   },
   "dependencies": {
     "@drupal/once": "^1.0.1",
     "@splidejs/splide": "^4.1.4",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.0",
     "alpinejs": "^3.12.0",
     "svg4everybody": "^2.1.9",
     "tailwind-hamburgers": "^1.3.4",
