--- a/starter-kits/vanilla-scss/package.json
+++ b/starter-kits/vanilla-scss/package.json
@@ -29,26 +29,22 @@
     "dev:drupal": "yarn ws dev drupal",
     "build:drupal": "yarn ws build drupal",
     "lint:js": "eslint --ext .js ./",
-    "lint:css": "stylelint '**/*.css'",
+    "lint:css": "stylelint '**/*.scss'",
     "lint": "npm run lint:js; npm run lint:css;",
     "fmt:js": "eslint --fix --ext .js,.vue ./",
-    "fmt:css": "npm run lint:css --fix && prettier --loglevel warn --write '**/*.{css}'",
+    "fmt:css": "npm run lint:css --fix && prettier --loglevel warn --write '**/*.{scss}'",
     "fmt": "npm run fmt:js; npm run fmt:css",
     "ci": "npm run lint && npm run build:drupal"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "@storybook/addon-docs": "^7.0.11",
-    "@storybook/addon-essentials": "^7.0.11",
-    "@storybook/addon-links": "^7.0.11",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/builder-webpack5": "^7.0.11",
+    "@storybook/addon-essentials": "^7.0.2",
+    "@storybook/addon-links": "^7.0.2",
+    "@storybook/addon-postcss": "^3.0.0-alpha.1",
+    "@storybook/addons": "^7.0.2",
+    "@storybook/builder-webpack5": "^7.0.2",
     "@storybook/linter-config": "^3.1.2",
     "@storybook/react": "^7.0.2",
-    "@storybook/react-webpack5": "^7.0.11",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
+    "@storybook/react-webpack5": "^7.0.2",
     "@wingsuit-designsystem/cli": "2.0.0-alpha.5",
     "@wingsuit-designsystem/core": "2.0.0-alpha.5",
     "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.5",
@@ -58,11 +54,11 @@
     "@wingsuit-designsystem/preset-scss": "2.0.0-alpha.5",
     "@wingsuit-designsystem/preset-storybook": "2.0.0-alpha.5",
     "@wingsuit-designsystem/preset-twing": "2.0.0-alpha.5",
+    "@wingsuit-designsystem/preset-lint": "2.0.0-alpha.5",
     "@wingsuit-designsystem/storybook": "2.0.0-alpha.5",
     "autoprefixer": "^9.7.4",
+    "postcss": "^8.4.23",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "storybook-addon-themes": "^6.0.1",
-    "stylelint-scss": "^3.17.2"
+    "react-dom": "^16.13.1"
   }
 }
