--- a/starter-kits/vanilla-tailwind/package.json
+++ b/starter-kits/vanilla-tailwind/package.json
@@ -34,8 +34,6 @@
     "fmt": "npm run fmt:js; npm run fmt:css"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
     "@storybook/addon-essentials": "^7.0.2",
     "@storybook/addon-links": "^7.0.2",
     "@storybook/addon-postcss": "^3.0.0-alpha.1",
@@ -43,19 +41,21 @@
     "@storybook/builder-webpack5": "^7.0.2",
     "@storybook/linter-config": "^3.1.2",
     "@storybook/react": "^7.0.2",
-    "@storybook/react-webpack5": "^7.0.11",
+    "@storybook/react-webpack5": "^7.0.2",
     "@wingsuit-designsystem/cli": "2.0.0-alpha.5",
     "@wingsuit-designsystem/core": "2.0.0-alpha.5",
     "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.5",
     "@wingsuit-designsystem/preset-icon": "2.0.0-alpha.5",
     "@wingsuit-designsystem/preset-icon-spritemap": "2.0.0-alpha.5",
     "@wingsuit-designsystem/preset-placeholder": "2.0.0-alpha.5",
-    "@wingsuit-designsystem/preset-scss": "2.0.0-alpha.5",
     "@wingsuit-designsystem/preset-storybook": "2.0.0-alpha.5",
     "@wingsuit-designsystem/preset-tailwind": "2.0.0-alpha.5",
     "@wingsuit-designsystem/preset-twing": "2.0.0-alpha.5",
+    "@wingsuit-designsystem/preset-lint": "2.0.0-alpha.5",
     "@wingsuit-designsystem/storybook": "2.0.0-alpha.5",
+
     "autoprefixer": "^9.7.4",
+    "postcss": "^8.4.23",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
