fix: Add unique presets test

--- a/docs/package.json
+++ b/docs/package.json
@@ -19,14 +19,12 @@
     "prototyping"
   ],
   "scripts": {
-    "dev:storybook": "start-storybook --config-dir apps/storybook",
-    "dev:storybook:docksal": "start-storybook --config-dir apps/storybook -p 3000",
-    "build:storybook": "build-storybook --config-dir apps/storybook -o ./dist/app-storybook",
-    "docs:storybook": "build-storybook --docs --config-dir apps/storybook -o ./dist/app-storybook",
-    "build-storybook": "build-storybook --config-dir apps/storybook",
+    "dev:storybook": "yarn ws dev storybook",
+    "build:storybook": "yarn ws build storybook",
+    "docs:storybook": "yarn ws build storybook --docs",
     "deploy:storybook": "storybook-to-ghpages --existing-output-dir ./dist/app-storybook",
-    "dev:pages": "cross-env-shell NODE_ENV=development \"webpack --watch --config ./apps/pages/webpack.config.js\"",
-    "build:pages": "cross-env-shell NODE_ENV=production \"webpack  --config ./apps/pages/webpack.config.js\"",
+    "dev:pages": "yarn ws dev pages",
+    "build:pages": "yarn ws build pages",
     "lint:js": "eslint --ext .js ./",
     "lint:css": "stylelint '**/*.css'",
     "lint": "npm run lint:js; npm run lint:css;",
@@ -40,7 +38,7 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@storybook/addon-links": "^7.0.2",
-    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addon-postcss": "^3.0.0-alpha.1",
     "@storybook/addon-viewport": "^7.0.2",
     "@storybook/addons": "^7.0.2",
     "@storybook/linter-config": "^2.5.0",
@@ -56,7 +54,6 @@
     "@wingsuit-designsystem/storybook": "2.0.0-alpha.5",
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.1",
-    "cross-env": "^6.0.3",
     "eslint": "^6.7.2",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.10.0",
@@ -72,8 +69,6 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "regenerator-runtime": "^0.13.3",
-    "require-context": "^1.1.0",
-    "storybook-addon-themes": "^6.1.0",
     "webpack": "^5.56.1"
   },
   "dependencies": {
