--- a/starter-kits/tailwind/source/default/patterns/02-molecules/rich-snippet/rich-snippet.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/rich-snippet/rich-snippet.wingsuit.yml
@@ -45,22 +45,22 @@ rich_snippet:
       label: Small
       configuration:
         headline_text: 'text-2xl font-display'
-        text: 'text-base'
+        text: 'text-base font-copy'
         spacing: 'mb-3'
     default:
       label: Default
       configuration:
         headline_text: 'text-2xl lg:text-4xl'
-        text: 'text-base'
+        text: 'text-base font-copy'
         spacing: 'mb-3 lg:mb-4'
     large:
       label: Large
       configuration:
         headline_text: 'text-4xl lg:text-6xl'
-        text: 'text-base lg:text-lg'
+        text: 'text-base lg:text-lg font-copy'
         spacing: 'mb-4'
   configuration:
-    default:
-      attributes_classes: 'flex flex-col flex-1'
-      preheadline_classes: 'text-teal-500 text-base mb-2 font-display font-bold'
-      headline_classes: 'font-display font-bold'
+    classes:
+      wrapper: 'flex flex-col flex-1'
+      preheadline: 'text-teal-500 text-base mb-2 font-display font-bold'
+      headline: 'font-display font-bold'
