chore: Cleanup vanila starterkits

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -280,7 +280,7 @@ jobs:
           command: yarn lint
   test:
     executor:
-      class: small
+      class: medium
       name: sb_node_16_classic
     steps:
       - checkout
