--- a/presets/lint/package.json
+++ b/presets/lint/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/preset-lint",
-  "version": "2.0.0-alpha.5",
+  "version": "2.0.0-alpha.6",
   "description": "Wingsuit linting.",
   "repository": {
     "type": "git",
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
   "dependencies": {
-    "@wingsuit-designsystem/core": "2.0.0-alpha.5",
+    "@wingsuit-designsystem/core": "2.0.0-alpha.6",
     "eslint": "^8.37.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -37,12 +37,12 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "stylelint": "^13.13.1",
+    "eslint-webpack-plugin": "^4.0.1",
     "prettier": "^2.3.0",
-    "stylelint-scss": "^5.0.0",
+    "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
-    "stylelint-webpack-plugin": "^3.0.1",
-    "eslint-webpack-plugin": "^4.0.1"
+    "stylelint-scss": "^5.0.0",
+    "stylelint-webpack-plugin": "^3.0.1"
   },
   "scripts": {
     "prepare": "node ../../scripts/prepare.js"
