fix: Add e2e tests

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -37,6 +37,7 @@
     "@types/webpack": "^5.28.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
+    "@babel/preset-env": "^7.21.5",
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.30.2",
     "css-loader": "^6.7.1",
@@ -49,6 +50,7 @@
     "mini-css-extract-plugin": "^2.6.0",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "postcss": "^8.3.9",
+    "cross-env": "^7.0.3",
     "postcss-loader": "^7.2.4",
     "resolve-url-loader": "^3.1.4",
     "style-loader": "^3.3.0",
