--- a/starter-kits/vanilla-scss/package.json
+++ b/starter-kits/vanilla-scss/package.json
@@ -45,6 +45,7 @@
     "@storybook/linter-config": "^3.1.2",
     "@storybook/react": "^7.0.2",
     "@storybook/react-webpack5": "^7.0.2",
+    "storybook": "^7.0.2",
     "@wingsuit-designsystem/cli": "2.0.0-alpha.6",
     "@wingsuit-designsystem/core": "2.0.0-alpha.6",
     "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.6",
