--- a/starter-kits/vanilla-tailwind/package.json
+++ b/starter-kits/vanilla-tailwind/package.json
@@ -47,6 +47,7 @@
     "@wingsuit-designsystem/core": "2.0.0-alpha.6",
     "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.6",
     "@wingsuit-designsystem/preset-icon": "2.0.0-alpha.6",
+    "@wingsuit-designsystem/preset-icon-spritemap": "2.0.0-alpha.6",
     "@wingsuit-designsystem/preset-lint": "2.0.0-alpha.6",
     "@wingsuit-designsystem/preset-pattern": "2.0.0-alpha.6",
     "@wingsuit-designsystem/preset-placeholder": "2.0.0-alpha.6",
