--- a/starter-kits/vanilla-scss/package.json
+++ b/starter-kits/vanilla-scss/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/starter-kit-vanilla-scss",
-  "version": "2.0.0-alpha.6",
+  "version": "2.0.0-alpha.7",
   "description": "Vanilla Wingsuit Starter-Kit",
   "main": "",
   "license": "GPL-2.0",
@@ -45,22 +45,22 @@
     "@storybook/linter-config": "^3.1.2",
     "@storybook/react": "^7.0.2",
     "@storybook/react-webpack5": "^7.0.2",
-    "storybook": "^7.0.2",
-    "@wingsuit-designsystem/cli": "2.0.0-alpha.6",
-    "@wingsuit-designsystem/core": "2.0.0-alpha.6",
-    "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.6",
-    "@wingsuit-designsystem/preset-icon": "2.0.0-alpha.6",
-    "@wingsuit-designsystem/preset-icon-spritemap": "2.0.0-alpha.6",
-    "@wingsuit-designsystem/preset-lint": "2.0.0-alpha.6",
-    "@wingsuit-designsystem/preset-pattern": "2.0.0-alpha.6",
-    "@wingsuit-designsystem/preset-placeholder": "2.0.0-alpha.6",
-    "@wingsuit-designsystem/preset-scss": "2.0.0-alpha.6",
-    "@wingsuit-designsystem/preset-storybook": "2.0.0-alpha.6",
-    "@wingsuit-designsystem/preset-twing": "2.0.0-alpha.6",
-    "@wingsuit-designsystem/storybook": "2.0.0-alpha.6",
+    "@wingsuit-designsystem/cli": "2.0.0-alpha.7",
+    "@wingsuit-designsystem/core": "2.0.0-alpha.7",
+    "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.7",
+    "@wingsuit-designsystem/preset-icon": "2.0.0-alpha.7",
+    "@wingsuit-designsystem/preset-icon-spritemap": "2.0.0-alpha.7",
+    "@wingsuit-designsystem/preset-lint": "2.0.0-alpha.7",
+    "@wingsuit-designsystem/preset-pattern": "2.0.0-alpha.7",
+    "@wingsuit-designsystem/preset-placeholder": "2.0.0-alpha.7",
+    "@wingsuit-designsystem/preset-scss": "2.0.0-alpha.7",
+    "@wingsuit-designsystem/preset-storybook": "2.0.0-alpha.7",
+    "@wingsuit-designsystem/preset-twing": "2.0.0-alpha.7",
+    "@wingsuit-designsystem/storybook": "2.0.0-alpha.7",
     "autoprefixer": "^9.7.4",
     "postcss": "^8.4.23",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "storybook": "^7.0.2"
   }
 }
