chore: Add missing imports to templates

--- a/starter-kits/tailwind/source/default/patterns/03-organisms/section-slider/section-slider.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/section-slider/section-slider.wingsuit.yml
@@ -1,6 +1,9 @@
 section_slider:
   use: "@organisms/section-slider/section-slider.twig"
   label: "Section Slider"
+  dependencies:
+    - container
+    - slider
   extends:
     - container.settings
     - slider.settings
