--- a/starter-kits/tailwind/source/default/patterns/03-organisms/section/section.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/section/section.wingsuit.yml
@@ -2,6 +2,9 @@ section:
   use: "@organisms/section/section.twig"
   label: Columns section
   icon_path: ws-assets://images/section-icon.svg
+  dependencies:
+    - grid
+    - container
   extends:
     - grid.settings
     - container.settings
