fix: Search bar and header fix.

--- a/starter-kits/tailwind/apps/drupal/wingsuit.info.yml
+++ b/starter-kits/tailwind/apps/drupal/wingsuit.info.yml
@@ -6,6 +6,7 @@ libraries:
   - wingsuit/core
 regions:
   primary_menu: Primary menu
+  search_bar: Search bar
   highlighted: Highlighted
   language_switcher: Language switcher
   breadcrumb: Breadcrumb
