fix: Hero and avatar buttons fix.

--- a/starter-kits/tailwind/source/default/patterns/02-molecules/hero/hero.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/hero/hero.wingsuit.yml
@@ -5,6 +5,7 @@ hero:
   description: Hero section component, for all your presentation needs.
   extends:
     - rich_snippet.fields
+    - rich_snippet.settings
     - grid.settings.reverse
   dependencies:
     - grid
