fix: Forms style fix.

--- a/starter-kits/tailwind/source/default/patterns/00-forms/element/fieldset.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/element/fieldset.wingsuit.yml
@@ -1,4 +1,4 @@
-form_fieldgroup:
+form_fieldset:
   use: "@forms/element/fieldset.twig"
   label: Fieldset
   description: Input forms styled with Tailwind custom forms.
