--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "fs-extra": "^9.0.0",
     "http-server": "^0.12.3",
     "jest": "^29.5.0",
+    "jest-resolve": "^29.5.0",
     "jest-cli": "^29.5.0",
     "jest-config": "^29.5.0",
     "jest-diff": "^29.5.0",
