--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -69,9 +69,9 @@
     "query-ast": "^1.0.3",
     "rimraf": "^3.0.2",
     "typescript": "^3.4.0",
-    "yeoman-environment": "^3.4.0",
-    "yeoman-generator": "^5.2.0",
-    "yosay": "^2.0.1"
+    "yeoman-environment": "^3.19.3",
+    "yeoman-generator": "^5.9.0",
+    "yeoman-test": "7.3.0"
   },
   "repository": {
     "type": "git",
